unpackaged/main/default/objects/Competitor__c/Competitor__c.object-meta.xml
<CustomObject>
    <description>Used to track who the competition is on a particular opportunity.  Links the competitor to the opportunity with additional information to help identify the elements of the competition.</description>
    <label>Competitor</label>
    <nameField>
        <displayFormat>Comp-{0}</displayFormat>
        <label>Competitor No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>