unpackaged/main/default/objects/Competitor__c/fields/Bypass_VR_and_Automation__c.field-meta.xml
<CustomField>
    <fullName>Bypass_VR_and_Automation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is used by admins to bypass validation rules (VR) and automation as needed. It is automatically unchecked after it is used.</description>
    <label>Bypass VR and Automation</label>
    <type>Checkbox</type>
</CustomField>