unpackaged/main/default/objects/Competitor__c/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>If unknown, enter &quot;Unknown.&quot;</inlineHelpText>
    <label>Competitor</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <filterItems>
            <field>Account.Partner_is_Competitor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Competing Opportunities</relationshipLabel>
    <relationshipName>Competitors</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>