unpackaged/main/default/objects/Competitor__c/fields/Is_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Is_Incumbent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the customer&#39;s current solution.</description>
    <inlineHelpText>This is the customer&#39;s current solution.</inlineHelpText>
    <label>Is Incumbent</label>
    <type>Checkbox</type>
</CustomField>