unpackaged/main/default/objects/Competitor__c/fields/Lost_To__c.field-meta.xml
<CustomField>
    <fullName>Lost_To__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select this field when the deal was lost to this competitor</inlineHelpText>
    <label>Lost To</label>
    <type>Checkbox</type>
</CustomField>