unpackaged/main/default/objects/Competitor__c/fields/Reasons_We_Will_Win__c.field-meta.xml
<CustomField>
    <fullName>Reasons_We_Will_Win__c</fullName>
    <description>Tracking why we can win or lose against a competitor gives us critical insight that can help improve our product, sales, and marketing strategy.</description>
    <label>Reasons We&#39;ll Win</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Win_Loss_Reasons</valueSetName>
    </valueSet>
</CustomField>