unpackaged/main/default/objects/Competitor__c/fields/Strategy__c.field-meta.xml
<CustomField>
    <fullName>Strategy__c</fullName>
    <inlineHelpText>Create and document a strategy to overcome the opposition.</inlineHelpText>
    <label>Strategy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>