unpackaged/main/default/objects/Competitor__c/fields/Strengths__c.field-meta.xml
<CustomField>
    <fullName>Strengths__c</fullName>
    <inlineHelpText>Identify the areas where you have an edge on the competition.</inlineHelpText>
    <label>Strengths</label>
    <type>TextArea</type>
</CustomField>