unpackaged/main/default/objects/Competitor__c/fields/Weaknesses__c.field-meta.xml
<CustomField>
    <fullName>Weaknesses__c</fullName>
    <inlineHelpText>Identify the areas where you are at a disadvantage in the competition</inlineHelpText>
    <label>Weaknesses</label>
    <type>TextArea</type>
</CustomField>