unpackaged/main/default/objects/Competitor__c/validationRules/Require_Lead_Contact_or_Opportunity.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Lead_Contact_or_Opportunity</fullName>
    <active>true</active>
    <description>Lead, Contact, and/or Opportunity are required.</description>
    <errorConditionFormula>$Permission.Bypass_Defined_VR_s = FALSE &amp;&amp;
Bypass_VR_and_Automation__c = FALSE &amp;&amp;

(
    ISNEW() ||
    ISCHANGED(Lead__c) ||
    ISCHANGED(Contact__c) ||
    ISCHANGED(Opportunity__c)
) &amp;&amp;

ISBLANK(Lead__c) &amp;&amp;
ISBLANK(Contact__c) &amp;&amp;
ISBLANK(Opportunity__c)</errorConditionFormula>
    <errorMessage>Lead, Contact, and/or Opportunity are required.</errorMessage>
</ValidationRule>