unpackaged/main/default/objects/Competitor__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Competitor__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>